--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,8 +11,8 @@
 "dark":"Dark",
 "light":"Light",
 "delete":"Delete",
-"done":"Done",
-"settings":"settings",
+"done":"Done!",
+"settings":"Settings",
 "please_enter_your_task":"Please enter your task",
 "please_enter_description":"Please enter description",
 "edit_task":"Edit Task",
@@ -22,5 +22,19 @@
 "email":"Email",
 "password":"Password",
 "confirm_password":"Confirm Password",
-"login":"Login"
+"login":"Login",
+"logout": "Log out",
+"confirm_logout_message": "Are you sure you want to logout? You will need to log in again to access your tasks.",
+"cancel": "Cancel",
+"or_create_an_account": "or create an account?",
+"error":"Failed",
+"register_successfully":"Register successfully",
+"login_successfully":"Login successfully",
+"success":"Success",
+"the_password_provided_is_too_weak":"The password provided is too weak.",
+"the_account_already_exists_for_that_email":"The account already exists for that email",
+"ok":"Ok",
+"no_user_found_for_that_email_and_password":"No user found for that email and password",
+"invalid_password":"Invalid password",
+"network_error":"Network connection lost"
 }
